<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/WizardPageContainer"
              android:orientation="vertical">

    <TextView style="@style/WizardPageTitleCarPal"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView style="@style/WizardFormLabelCarPal"
                      android:text="@string/profile_label_full_name"/>

            <EditText android:id="@+id/profile_full_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:saveEnabled="false"
                      android:inputType="textCapWords"
                      android:hint="@string/profile_hint_full_name"
                android:layout_marginBottom="16dp"/>

            <TextView style="@style/WizardFormLabelCarPal"
                      android:text="@string/profile_label_organization"/>

            <EditText android:id="@+id/profile_organization"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:saveEnabled="false"
                      android:enabled="false"
                      android:layout_marginBottom="16dp"/>

            <TextView style="@style/WizardFormLabelCarPal"
                      android:text="@string/profile_label_moto"/>

            <EditText android:id="@+id/profile_moto"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:saveEnabled="false"
                      android:layout_marginBottom="0dp"/>

            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_margin="25dp"/>

            <TextView style="@style/WizardFormLabelCarPal"
                      android:text="@string/profile_label_street"/>
            <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rowCount="2"
                    android:columnCount="2">
                <EditText android:id="@+id/profile_street"
                          android:saveEnabled="false"
                          android:layout_gravity="fill"
                          android:layout_marginBottom="16dp"/>
                <EditText android:id="@+id/profile_house_number"
                          android:saveEnabled="false"
                          android:hint="#"
                          android:layout_gravity="center_horizontal"/>

                <EditText android:id="@+id/profile_city"
                          android:saveEnabled="false"
                          android:layout_gravity="fill"/>
                <EditText android:id="@+id/profile_country"
                          android:saveEnabled="false"
                          android:hint="Country"/>
            </GridLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>